--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -68,7 +68,7 @@
 <body>
     <div class="audio-container">
         <h1 class="audio-title">Audio {{ .Title }}</h1>
-        <audio controls preload="metadata">
+        <audio controls preload="auto" autoplay>
             <source src="audio.mp3" type="audio/mpeg">
             Ihr Browser unterstützt das Audio-Element nicht.
         </audio>
