big button & scrubber

--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -55,7 +55,6 @@
             width: 100%;
             height: 54px;
             margin-bottom: 20px;
-            display: none;
         }
         .transcript-container {
             background: white;
@@ -101,7 +100,7 @@
                 <path d="M14,19.14H18V5.14H14V19.14M6,19.14H10V5.14H6V19.14Z"/>
             </svg>
         </button>
-        <audio id="audioPlayer" preload="auto" autoplay>
+        <audio id="audioPlayer" controls preload="auto" autoplay>
             <source src="audio.mp3" type="audio/mpeg">
             Ihr Browser unterstützt das Audio-Element nicht.
         </audio>
